--- a/index.css
+++ b/index.css
@@ -6,6 +6,10 @@
     color: #333;
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 body {
     background-color: #FAFAF8;
 }
@@ -14,33 +18,57 @@ body::before {
     content: "";
 }
 
-.button {
-    position: relative;
-    border-radius: 10px;
-    padding: 10px 20px;
-    text-align: center;
-    border: none;
-}
-
-.button::after {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 50%;
-    right: 10px;
-    transform: translateY(-50%);
-    border-top: 6px solid transparent;
-    border-bottom: 6px solid transparent;
-    border-left: 10px solid; /* ボタンの色 */
-}
-
 .inner {
     max-width: 1040px;
     margin-inline: auto;
+    padding-inline: 30px; /* PCでも左右に少し余白 */
+}
+
+.u-pc {
+    display: block;
+
+    @media (max-width: 1024px) {
+        display: none;
+    }
+}
+
+.u-tb {
+    display: none;
+
+    @media (max-width: 1024px) {
+        display: block;
+    }
+
+    @media (max-width: 768px) {
+        display: none;
+    }
+}
+
+.u-sp {
+    display: none;
+
+    @media (max-width: 768px) {
+        display: block;
+    }
+}
+
+/* タブレットサイズ以下 */
+@media (max-width: 900px) {
+  .inner {
+    max-width: 95vw;
+    padding-inline: 20px;
+  }
+}
+
+/* スマホサイズ */
+@media (max-width: 600px) {
+  .inner {
+    max-width: 100vw;
+    padding-inline: 5vw;
+  }
 }
 
 /* 共通レイアウト */
-
 .section__title {
     font-size: 40px;
     font-weight: 700;
@@ -50,18 +78,112 @@ body::before {
 }
 
 .button-free {
-    max-width: 305px;
-    background-color: #F7E40B;
-
+    background: linear-gradient(
+        180deg,
+        #f7e30bdf 10%,   /* 上端は80%透明の白 */
+        rgba(255, 255, 255, 0) 40%,     /* 中央で透明度0% */
+        #F7E40B 100%                   /* 下端はそのまま黄色 */
+    ),
+    linear-gradient(180deg, #FFFBEA 0%, #F7E40B 100%);
 }
 
 .button-line {
-    max-width: 257px;
-    background-color: #02C755;
+    background: linear-gradient(
+        180deg,
+        #02C755 0%,   /* 上端は80%透明の白 */
+        rgba(255, 255, 255, 0) 40%,     /* 中央で透明度0% */
+        #01B14A 100%                   /* 下端はそのまま黄色 */
+    ),
+    linear-gradient(180deg, #F5F5F5 0%, #02C755 100%);
+    color: #fff;
+}
+
+.button {
+    position: relative;
+    padding-block: 2px;
+    text-align: center;
+    border: none;
+}
+
+.button-free:hover {
+    background-position: right center;
+    background-size: 200% auto;
+    -webkit-animation: ripple-free 1.5s infinite;
+    animation: ripple-free 1.5s infinite;
+    color: #fff;
+}
+
+.button-line:hover {
+    background-position: right center;
+    background-size: 200% auto;
+    -webkit-animation: ripple-line 1.5s infinite;
+    animation: ripple-line 1.5s infinite;
+}
+  
+@keyframes ripple-free {
+    0% {box-shadow: 0 0 0 0 #F7E40B;}
+    70% {box-shadow: 0 0 0 10px rgb(27 133 251 / 0%);}
+    100% {box-shadow: 0 0 0 0 rgb(27 133 251 / 0%);}
+}
+
+@keyframes ripple-line {
+    0% {box-shadow: 0 0 0 0 #02C755;}
+    70% {box-shadow: 0 0 0 10px rgb(2 199 85 / 0%);}
+    100% {box-shadow: 0 0 0 0 rgb(2 199 85 / 0%);}
+}
+
+.button__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: solid 1px #FFF;
+}
+
+.button-free-circle {
+    background-color: #FFF;
+    border-radius: 50%;
+    font-weight: 700;
+    line-height: 120%;
+}
+
+.button-free-text {
+    font-weight: 700;
+    line-height: 100%;
+}
+
+.button-line-text {
+    color: #fff;
+    font-weight: 700;
+    line-height: 100%;
+}
+
+.button-arrow {
+    background-color: #fff;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.button-free-red {
+    color: #FF382B;
+}
+
+.button-arrow-free {
+    color: #F7E40B;
+}
+
+.button-arrow-line {
+    color: #02C755
+}
+
+@media screen and (max-width: 1024px) {
+    .section__title {
+        font-size: 32px;
+    }
 }
 
 /* ヘッダー */
-
 .header {
     display: flex;
     justify-content: space-between;
@@ -82,18 +204,67 @@ body::before {
     gap: 34px;
 }
 
-.header__contact-red {
-    color: #FF382B;
+.header__button {
+    padding-inline: 3px;
+    border-radius: 6px;
+    max-height: 57px;
 }
 
+.header__button-container {
+    border-radius: 6px;
+}
+
+.header__button-container-free {
+    padding-block: 6px;
+    padding-inline: 25px 31px;
+}
+
+.header__button-container-line {
+    padding-block: 16px;
+    padding-inline: 48px 38px;
+}
+
+.header__button-free-circle {
+    width: 40px;
+    height: 40px;
+    font-size: 8px;
+    padding-top: 9px;
+}
+
+.header__button-free-circle-big {
+    font-size: 13px;
+}
+
+.header__button-free {
+    width: 305px;
+}
+
+.header__button-line {
+    width: 262px;
+}
+
+.header__button-free-text {
+    font-size: 16px;
+}
+
+.header__button-line-text {
+    font-size: 16px;
+}
+
+.header__button-arrow {
+    width: 21px;
+    height: 21px;
+    font-size: 8px;
+}
 /* ファーストビュー */
 
 .fv {
-    height: calc(100vh - 89px);
+    position: relative;
+    padding: 73px 90px 45px;
 }
 
 .fv__container {
-    width: 45%;
+    width: 560px;
     margin-right: auto;
 }
 
@@ -132,7 +303,8 @@ body::before {
 }
 
 .fv__content-item {
-    max-width: 160px;
+    width: 160px;
+    height: 160px;
     aspect-ratio: 1/1;
     background-color: #fff;
     border-radius: 50%;
@@ -141,16 +313,45 @@ body::before {
     align-items: center;
     padding: 15px;
     text-align: center;
+    line-height: 150%;
+    font-size: 16px;
+    font-weight: 700;
 }
 
+.fv__content-item-orange {
+    color: #FF9000;
+    font-size: 18px;
+}
+
+.fv__image-container {
+    position: absolute;
+    top: -300px;
+    right: -150px;
+    max-width: 1050px; /* 画面幅の半分くらい */
+    max-height: 1050px;
+    width: 80vw;
+    height: 80vw;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-end;
+    pointer-events: none; /* 画像の上でクリックできなくする場合 */
+    z-index: -1;
+}
 
 .fv__image {
     position: absolute;
     top: 0;
     right: 0;
-    width: 50%;
+    max-width: 80%;
+    max-height: 80%;
+    width: 64vw;
+    height: 64vw;
     border-radius: 50%;
-    object-fit: cover;
+    object-fit: scale-down;
+    object-position: 0% 150%;
+    box-shadow: 0 4px 24px rgba(0,0,0,0.08);
+    mask-image: linear-gradient(to bottom, white 0%, transparent 25%, black 35%, black 100%);
+    -webkit-mask-image: linear-gradient(to bottom, white 0%, transparent 25%, black 35%, black 100%);
 }
 
 /* お悩み */
@@ -161,11 +362,11 @@ body::before {
     align-items: center;
     gap: 20px;
     margin-inline: auto;
-    max-width: 809px;
+    max-width: 1040px;
+    padding: 64px 115px 48px;
 }
 
 .problem__title {
-    font-size: 40px;
     font-weight: 700;
     line-height: 150%;
 }
@@ -215,6 +416,11 @@ body::before {
     padding-bottom: 80px;
 }
 
+.solution__inner {
+    max-width: 1280px;
+    margin-inline: auto;
+}
+
 .solution__arrow {
     height: 60px;
     width: fit-content;
@@ -246,7 +452,6 @@ body::before {
 }
 
 .solution__title {
-    font-size: 40px;
     font-weight: 700;
     line-height: 120%;
     width: fit-content;
@@ -280,6 +485,7 @@ body::before {
     border-radius: 10px;
     background-color: #fff;
     max-width: 380px;
+    width: calc((100% - 40px) / 3);
 }
 
 .solution__container-item-title {
@@ -314,20 +520,55 @@ body::before {
     padding-inline: 30px;
 }
 
+@media (max-width: 1024px) {
+    .solution__container-items {
+        flex-direction: column;
+        margin-inline: auto;
+        width: fit-content;
+        gap: 40px;
+    }
+
+    .solution__container-item {
+        max-width: 600px;
+        width: 100%;
+    }
+}
+
 /* CV */
 
 .cv {
-    background:
-        linear-gradient(to right, 
+    background:linear-gradient(to right, 
             rgba(100, 99, 78, 0) 0%,
             rgba(100, 99, 78, 0.9) 35%,
             #64634E 40%,
-            #64634E 100%
-        ),
-        url(images/cv.png) no-repeat left center;
-    background-size: cover, contain;
-    background-repeat: no-repeat, no-repeat;
-    background-position: right top, left center;
+            #64634E 100%);
+    height: 441px;
+    position: relative;
+    padding-bottom: 32px;
+}
+
+.cv::before {
+    content: "CONTACT";
+    color: #fff;
+    font-family: "Outfit", sans-serif;
+    opacity: 0.1;
+    font-size: 160px;
+    font-weight: 700;
+    line-height: 100%;
+    position: absolute;
+    right: 0;
+    top: -30px;
+}
+
+.cv__image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: auto;
+    height: 100%;
+    aspect-ratio: 497/440;
+    mask-image: linear-gradient(to right, black 60%, transparent 100%);
+    -webkit-mask-image: linear-gradient(to right, black 60%, transparent 100%);
 }
 
 .cv__title {
@@ -337,23 +578,43 @@ body::before {
     font-weight: 700;
     line-height: 150%;
     text-align: center;
+    background: url(images/background-yellow.png) no-repeat 30% 30%;
+    background-size: 400px 400px;
 }
 
 .cv__container {
     background-color: #fff;
     max-width: 1040px;
-    height: 200px;
+    min-height: 200px;
     margin-inline: auto;
     border-radius: 20px;
+    text-align: center;
+    padding: 45px 60px 35px;
+    position: relative;
+    z-index: 2;
+}
+
+.cv__text {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 100%;
+    margin-top: 20px;
 }
 
 .cv__buttons {
+    margin-top: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 20px;
-    margin-inline: auto;
-    max-width: 920px;
+    gap: 28px;
+}
+
+.cv__button {
+    display: block;
+    border-radius: 10px;
+    padding-inline: 5px;
+    padding-block: 3px;
+    max-height: 87px;
 }
 
 .cv__button-free {
@@ -364,19 +625,70 @@ body::before {
     width: 412px;
 }
 
-/* 特徴 */
+.cv__button-container {
+    border-radius: 10px;
+}
 
+.cv__button-free-container {
+    padding-block: 12px;
+    padding-inline: 40px 47px;   
+}
+
+.cv__button-line-container {
+    padding-block: 26px;
+    padding-inline: 75px 64px;   
+}
+
+.cv__button-free-circle {
+    width: 61px;
+    height: 61px;
+    font-size: 12px;
+    padding-top: 15px;
+}
+
+.cv__button-free-big {
+    font-size: 20px;
+}
+
+.cv__button-free-text {
+    font-size: 25px;
+}
+
+.cv__button-free-red {
+    font-size: 25px;
+}
+
+.cv__button-line-text {
+    font-size: 25px;
+}
+
+.cv__button-arrow {
+    width: 33px;
+    height: 33px;
+    font-size: 13px;
+}
+
+@media (max-width: 1024px) {
+    .cv::before {
+        font-size: 120px;
+    }
+}
+
+/* 特徴 */
 .feature {
     padding-block: 80px;
 }
 
-.feature__inner {
-    background-color: #fff;
-    border-radius: 50px;
+.feature__container {
     padding-block: 60px;
+    border-radius: 50px;
+    background-color: #fff;
+    margin-inline: auto;
+    max-width: 1040px;
+    padding-inline: 90px;
 }
 
-.feature__container {
+.feature__container-box {
     display: flex;
     max-width: 860px;
     margin-inline: auto;
@@ -386,7 +698,7 @@ body::before {
     margin-bottom: 60px;
 }
 
-.feature__container:nth-child(2n) {
+.feature__container-box:nth-child(2n) {
     flex-direction: row-reverse;
 }
 
@@ -396,6 +708,7 @@ body::before {
     justify-content: space-between;
     align-items: center;
     gap: 20px;
+    width: calc((100% - 75px) / 2);
 }
 
 .feature__container-title {
@@ -450,8 +763,23 @@ body::before {
 
 .feature__container-image {
     max-width: 400px;
-    width: 50%;
+    min-width: 250px;
+    width: calc((100% - 75px) / 2);
     border-radius: 10px;
+}
+
+@media (max-width: 1024px) {
+    .feature__container-box {
+        gap: 40px;
+    }
+
+    .feature__container-item {
+        width: calc((100% - 40px) / 2 + 30px);
+    }
+
+    .feature__container-image {
+        width: calc((100% - 40px) / 2 - 30px);
+    }
 }
 
 /* 実績紹介 */
@@ -517,8 +845,8 @@ body::before {
     justify-content: space-between;
     align-items: center;
     gap: 60px;
-    padding-block: 40px;
-    padding-inline: 90px;
+    padding-block: 50px;
+    padding-inline: 40px;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
 }
@@ -526,6 +854,7 @@ body::before {
 .achievement__container-item-content {
     width: 100%;
     max-width: 460px;
+    width: calc((100% - 60px) / 2 + 10px);
 }
 
 .achievement__container-item-list {
@@ -569,15 +898,26 @@ body::before {
     line-height: 140%;
 }
 
-
 .achievement__container-item-image {
     max-width: 440px;
+    width: calc((100% - 60px) / 2 - 10px);
+    min-width: 300px;
 }
 
 .hidden {
     display: none !important;
 }
 
+
+@media screen and (max-width: 1024px) {
+    .achievement__list {
+        height: 60px;
+    }
+
+    .achievement__list-item {
+        font-size: 20px;
+    }
+}
 
 /* フロー */
 
@@ -671,7 +1011,7 @@ body::before {
 
 .faq__title {
     text-align: left;
-    width: 250px;
+    min-width: 250px;
 }
 
 .faq__container {
@@ -744,27 +1084,63 @@ body::before {
     color: #333333;
 }
 
+@media (max-width: 1024px) {
+    .faq__inner {
+        gap: 0;
+    }
+
+    .faq__title {
+        text-align: center;
+        min-width: 200px;
+    }
+
+    .faq__container {
+        max-width: 800px;
+    }
+
+    .faq__container-item {
+        padding-inline: 20px;
+    }
+    
+}
+
 /* お問い合わせ */
 .contact {
     padding-block: 80px 100px;
+    position: relative;
+}
+
+.contact__inner {
+    max-width: 1280px;
+    margin-inline: auto;
 }
 
 .contact__bubble {
+    position: absolute;
+    padding: 15px 40px 25px;
+    border: 3px solid #F7E40B;
+    background-color: #ffffff;
+    border-radius: 10px;
+    text-align: center;
+    left: 50%;
+    top: -15px;
+    transform: translateX(-50%);
+    white-space: nowrap;
+    max-width: 720px;
+}
+
+.contact__bubble-text-container {
     position: relative;
-    width: fit-content;
-    padding: 12px 16px;
-    border: 2px solid #333333;
-    border-radius: 4px;
-    margin-inline: auto;
+    z-index: 2;
 }
 
 .contact__bubble::before {
     content: "";
     position: absolute;
-    bottom: -5px;
+    bottom: -20px;
     left: 50%;
-    width: 15px;
-    height: 15px;
+    width: 40px;
+    height: 40px;
     box-sizing: border-box;
     background-color: #ffffff; /* 背景色と同じ色を指定 */
     rotate: 135deg;
@@ -774,13 +1150,13 @@ body::before {
 .contact__bubble::after {
     content: "";
     position: absolute;
-    bottom: -8px;
+    bottom: -20px;
     left: 50%;
-    width: 15px;
-    height: 15px;
+    width: 40px;
+    height: 40px;
     box-sizing: border-box;
-    border: 2px solid;
-    border-color: #333333 #333333 transparent transparent;
+    border: 3px solid;
+    border-color: #F7E40B #F7E40B transparent transparent;
     rotate: 135deg;
     translate: -50%;
 }
@@ -789,6 +1165,7 @@ body::before {
     font-size: 30px;
     font-weight: 700;
     line-height: 150%;
+    display: inline-block;
 }
 
 .contact__free-red {
@@ -798,10 +1175,10 @@ body::before {
 
 .contact__free-text {
     font-size: 26px;
+    margin-left: 10px;
 }
 
-
-.contact__inner {
+.contact__container {
     max-width: 1280px;
     margin-inline: auto;
     background-color: #F5F5F5;
@@ -962,4 +1339,119 @@ body::before {
     /* 既存の .button スタイルを継承しつつ、必要なら上書き */
 }
 
+@media (max-width: 1024px) {
+    .contact__bubble {
+        position: absolute;
+        padding: 15px 40px 25px;
+        border: 3px solid #F7E40B;
+        background-color: #ffffff;
+        border-radius: 10px;
+        text-align: center;
+        left: 50%;
+        top: -15px;
+        transform: translateX(-50%);
+        white-space: nowrap;
+        max-width: 720px;
+    }
+    
+    .contact__bubble-text-container {
+        position: relative;
+        z-index: 2;
+    }
+    
+    .contact__bubble::before {
+        content: "";
+        position: absolute;
+        bottom: -20px;
+        left: 50%;
+        width: 40px;
+        height: 40px;
+        box-sizing: border-box;
+        background-color: #ffffff; /* 背景色と同じ色を指定 */
+        rotate: 135deg;
+        translate: -50%;
+    }
+    
+    .contact__bubble::after {
+        content: "";
+        position: absolute;
+        bottom: -20px;
+        left: 50%;
+        width: 40px;
+        height: 40px;
+        box-sizing: border-box;
+        border: 3px solid;
+        border-color: #F7E40B #F7E40B transparent transparent;
+        rotate: 135deg;
+        translate: -50%;
+    }
+
+    .contact__free {
+        font-size: 20px;
+        font-weight: 700;
+        line-height: 150%;
+        display: inline-block;
+    }
+
+    .contact__free-red {
+        font-size: 30px;
+        color: #FF382B;
+    }
+
+    .contact__free-text {
+        font-size: 16px;
+    }
+
+    .contact__title::before {
+        font-size: 120px;
+        color: #EAEAEA;
+        z-index: -1;
+    }
+
+    .contact__container {
+        padding-block: 80px 40px;
+    }
+
+    .contact__form {
+        margin-inline: 20px;
+    }
+}
+
+
 /* フッター */
+.footer {
+    background-color: #333;
+}
+
+.footer__inner {
+    max-width: 1280px;
+    margin-inline: auto;
+}
+
+.footer__container {
+    padding-block: 42px 81px;
+}
+
+.footer__container-text {
+    font-size: 14px;
+    color: #fff;
+    font-weight: 700;
+    line-height: 180%;
+}
+
+.footer__hr {
+    border: 1px solid #fff;
+    margin-block: 42px;
+}
+
+.footer__container-privacy {
+    padding-block: 30px 157px;
+}
+
+.footer__container-privacy-link {
+    font-size: 14px;
+    color: #fff;
+    font-weight: 700;
+    line-height: 160%;
+}
+
